istio/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo
spec:
  gateways:
    - istio-system/monitor-gateway
  hosts:
    - "moamoa-news.com"
  http:
    - name: primary
      route:
        - destination:
            host: rollouts-demo
            subset: stable
          weight: 100
        - destination:
            host: rollouts-demo
            subset: canary
          weight: 0
